@@ -141,6 +141,7 @@ SearchResult.pageName = Result type
 SearchResult.resultCount = Result count
 
 TablePage.title = Table of {0}
+DetailPage.title = {0}
 
 AuthenticationFailed = Authentication failed
 
