@@ -4,6 +4,7 @@ Every release contains many small fixes.
 
 === 1.14.0.0
 * Sorting for completely loaded tables
+* SimpleTablePageWithDetail more helper methods
 
 === 1.13.0.0
 * Materialized getters (@Materialized)
